--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BBH+Bartle&family=BBH+Bogle&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Lobster&family=Oswald:wght@200..700&family=Playwrite+NO:wght@100..400&display=swap');
 
 .ts-text{
     text-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
 
-
+/*Fuente Oswald*/
 .oswald-200 {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
@@ -39,5 +39,85 @@
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
+    font-style: normal;
+}
+
+/*Fuente BBG Bogle*/
+.bbh-bogle {
+    font-family: "BBH Bogle", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+/*Fuente BBH Bartle*/
+.bbh-bartle-regular {
+    font-family: "BBH Bartle", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+/*Fuente Bebas Neuw*/
+.bebas-neue {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+/*Dancing Script*/
+.dancing-script-400 {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+.dancing-script-500 {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+.dancing-script-600 {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+.dancing-script-700 {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+/*Fuente Playwrite NO*/
+.playwrite-no-100 {
+    font-family: "Playwrite NO", cursive;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+}
+.playwrite-no-200 {
+    font-family: "Playwrite NO", cursive;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+}
+.playwrite-no-300 {
+    font-family: "Playwrite NO", cursive;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+.playwrite-no-400 {
+    font-family: "Playwrite NO", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+/*Fuente Lobster*/
+.lobster {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
     font-style: normal;
 }
