--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=BBH+Bartle&family=BBH+Bogle&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Lobster&family=Oswald:wght@200..700&family=Playwrite+NO:wght@100..400&display=swap');
 
+/*Sombra usada en textos*/
 .ts-text{
     text-shadow: 0px 0px 10px rgb(0, 0, 0);
+}
+
+/*Ocultar botones en input:number*/
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /*Fuente BBG Bogle*/
